<resources>
    <string name="app_name">B07ProjectApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Strings related to login and signup -->
    <string name="prompt_fullName">Full Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_confirmPassword">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text">Login</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="signup_text">Sign up</string>
    <string name="cumpulsoryField_text">Field is mandatory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="software_name">Software Name</string>
    <string name="i_am_a">I am a…</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string name="hello_first_fragment">Would you like to log in using an existing account or register a new account?</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign-up</string>
    <!-- Strings related to admin add course page -->
    <string name="prompt_courseName">Course Name</string>
    <string name="prompt_courseCode">Course Code</string>
    <string name="prompt_offeringSessions">Offering Sessions</string>
    <string name="prompt_prerequisites">Prerequisites</string>
    <string name="add_button_text">Add Course</string>
    <!-- Strings related to admin home page-->
    <string name="welcome_admin">Welcome Admin</string>
    <string name="choice">Do you want to...</string>
    <string name="view_edit_button_text">Edit Courses</string>
    <!-- Strings related to admin edit course-->
    <string name="edit_message">Enter the name of the course you wish to edit</string>

    <string name="prompt_updatedcourseName">Updated Course Name</string>
    <string name="prompt_updatedcourseCode">Updated Course Code</string>
    <string name="prompt_updatedofferingSessions">Updated Offering Sessions</string>
    <string name="prompt_updatedprerequisites">Updated Prerequisites</string>
    <!-- Strings related to student course list page-->
    <string name="course_list_message">Here is your course list</string>
    <string name="action_add_course">Add courses</string>
    <string name="action_generate_timeline">Generate Course Timeline</string>
    <string name="courses_to_add_message">Select the courses you wish to add to your course list</string>
    <string name="courses">Courses:</string>
    <string name="action_choose_timeline_courses">Choose the courses you wish to add to your timeline: </string>
    <string name="timetable">Timetable</string>
    <string name="action_to_courselist">Back to Course List</string>
</resources>