<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="26dp"
    tools:context=".AdminUpdateCourse">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Enter the name of the course you wish to update."
        android:layout_marginTop="0dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/inputCourseToBeUpdated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_courseName"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Now enter the updated information.
        NOTE: If you do not wish to update a field, please fill it in with the original data."
        android:textSize = "18sp" />

    <EditText
        android:id="@+id/updateCourseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_updatedcourseName"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/updateCourseCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_updatedcourseCode"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/updateOfferingSessions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_updatedofferingSessions"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/updatePrerequisites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="17dp"
        android:hint="@string/prompt_updatedprerequisites"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/off_update_course_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Course!"
        tools:ignore="DuplicateSpeakableTextCheck" />
</LinearLayout>